Navigation menu on mobile fixed

--- a/css/media.css
+++ b/css/media.css
@@ -13,6 +13,22 @@
     .search {
         visibility: hidden;
     }
+    .nav {        
+        display: block;
+        
+    }
+
+    .menu-icon {
+        display: block;
+        margin: 0px;
+        padding: 0px;
+        
+      
+    
+       
+    }
+    
+ 
 }
 @media only screen and (max-width: 768px) {
     .btn-cta {
